--- a/eaunon/css/plantilla.css
+++ b/eaunon/css/plantilla.css
@@ -1,3 +1,12 @@
+*{
+    box-sizing: border-box;
+}
+#grid{
+    display: grid;
+    grid-template-columns: 7fr auto;
+    grid-template-rows: auto;
+}
+
 header{
     background-color: rgb(32, 27, 17);
     margin: 1%;
@@ -28,7 +37,6 @@ h2{
     background-color: rgb(255, 171, 0);
     font-family: Arial;
     border-radius: 25px;
-    position: absolute;
     width: 70%;
     margin-right: 20%;
     padding: 8px;
