--- a/eaunon/css/JQuery_Prueba.css
+++ b/eaunon/css/JQuery_Prueba.css
@@ -25,7 +25,7 @@ footer{
     width: 145px;
     height: 145px;
 }
-table{
+#tableCl{
     text-align:center;
 }
 h2{
@@ -41,13 +41,13 @@ h2{
     width: 70%;
     margin-right: 20%;
     padding: 8px;
-    height: 80%;
+    height: auto;
 }
 #ad{
     width: 20%;
     background-color: rgb(7, 6, 5);
     right: 0;
-    position: absolute;
+    position: fixed;
     margin-left: 70%;
     color: white;
 }
@@ -70,4 +70,7 @@ position: absolute;
 }
 .resaltar{
     background-color: crimson;
+}
+#tableTar{
+    padding-right: 15px;
 }
